# molpy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  conda_build_config.yaml  environment.yaml  md.lammpstrj  meta.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  test.ipynb  test.py  test_system.py  testarr  tip3p.data  zensical.toml
cpp/: CMakeLists.txt  binder.cpp  box.h  graph.cpp  graph.h  random.h  vectorMath.h
cpp/bindings/: module.cpp
cpp/src/: Frame.cpp
cpp/tests/: CMakeLists.txt  test_frame.cpp  test_graph.cpp
molpy/: CMakeLists.txt  __init__.py  abc.py  angle.py  atom.py  atomType.py  atoms.py  auto_bonds.py  base.py  bond.py  box.py  cell.py  convert.py  dihedral.py  element.py  factory.py  forcefield.py  graph.py  group.py  ioapi.py  item.py  molecule.py  neigh.py  system.py  topo.py  unit.py  utils.py
molpy/MD/: __init__.py  engine.py  integrator.py  langevin.py  velocity.py
molpy/algorithms/: __init__.py  cluster.py  isomorphvf2.py
molpy/core/: __init__.py  box.py  element.py  entity.py  forcefield.py  frame.py  graph.py  io_utils.py  item.py  nblist.py  partition.py  struct.py  system.py  topo.py  topology.py  trajectory.py  typing.py  utils.py
molpy/cpp/: CMakeLists.txt  molpy_cpp.cpp
molpy/io/: __init__.py  ase.py  base.py  dcd.py  fileHandler.py  lammps.py  lmp.py  pdb.py  smiles.py  xml.py
molpy/modeller/: __init__.py  base.py  randomWalk.py  solvent.py
molpy/potential/: __init__.py  lj.py  pair.py  utils.py
molpy/preset/: __init__.py  forcefields.py
molpy/presets/: molecules.py
molpy/src/: random_park.cpp  random_park.h  simpleRandomWalk.cpp  simpleRandomWalk.h
molpy/utils/: __init__.py  element.py  graphMatcher.py  typing.py  unit.py
src/cpp/: CMakeLists.txt
tests/: CMakeLists.txt  conftest.py  profiling.py  test_abc.py  test_alias.py  test_angle.py  test_atom.py  test_base.py  test_bond.py  test_box.py  test_cell.py  test_convert.py  test_element.py  test_entity.py  test_esterification_example.py  test_factory.py  test_forcefield.py  test_frame.py  test_graph.py  test_group.py  test_integration.py  test_io.py  test_ioapi.py  test_item.py  test_keywords.py  test_molecule.py  test_nblist.py  test_partition.py  test_plugin.py  test_sarw_builder.py  test_struct.py  test_system.py  test_topo.py  test_trajectory.py  test_unit.py  test_version.py  utils.py
tests/cpp/: CMakeLists.txt  test_random_walk.cc
tests/data/: bigsmiles_test_suite.json  validate_suite.py
tests/modeller/: test_solvent.py
tests/samples/: Ni.cif  UiO-66_vesta.cif  ala3.xml  mpidwater.xml
tests/test_MD/: test_integrator.py
tests/test_adapter/: __init__.py  test_base_adapter.py  test_bigsmiles.py  test_rdkit_adapter.py  test_rdkit_wrapper.py
tests/test_algorithm/: test_isomorph.py
tests/test_builder/: test_amber_polymer_builder.py  test_amber_unification.py  test_ambertools.py  test_assembly.py  test_assembly_gel.py  test_base.py  test_bulk.py  test_crystal.py  test_finalize.py  test_init.py  test_polybuilder.py  test_polymer.py  test_polymer_amber_sequence.py  test_polymer_build_perf.py  test_polymer_builder.py  test_polymer_compiler.py  test_polymer_connectors.py  test_polymer_core.py  test_polymer_distributions.py  test_polymer_dsl.py  test_polymer_incremental_typify.py  test_polymer_pipeline.py  test_polymer_placer.py  test_polymer_presets.py  test_polymer_sequences.py  test_polymer_system.py  test_polymer_tools.py  test_rand.py  test_region_typing_cache.py  test_struct.py  test_symmetry.py  test_virtualsite.py
tests/test_calculator/: test_calculator.py
tests/test_cli/: conftest.py  test_moltemplate_cmd.py
tests/test_compute/: __init__.py  parity_helpers.py  test_box_inheritance.py  test_cluster.py  test_conductivity.py  test_density.py  test_dielectric.py  test_dielectric_integration.py  test_diffraction.py  test_distribution.py  test_embed_replacement.py  test_environment.py  test_fit_repoint.py  test_gro_experimental.py  test_jacf.py  test_mcd.py  test_molrs_wrappers.py  test_neighborlist.py  test_onsager.py  test_order.py  test_orientations.py  test_persist.py  test_pmft.py  test_pmsd.py  test_rdf.py  test_reorientation.py  test_result.py  test_time_series.py  test_workflow.py
tests/test_conformer/: test_physical_sanity.py  test_pipeline.py
tests/test_core/: __init__.py  test_affected_region.py  test_arraydict.py  test_atomistic.py  test_atomistic_editing.py  test_atoms.py  test_block_inheritance.py  test_box.py  test_capping.py  test_cg.py  test_cg_editing.py  test_config.py  test_copy_behavior.py  test_core_cutover_architecture.py  test_element.py  test_entity_column_access.py  test_forcefield.py  test_forcefield_editing.py  test_frame.py  test_frame_inheritance.py  test_item.py  test_link.py  test_logger.py  test_molrs_reexports.py  test_nblist.py  test_nblist2.py  test_nestdict.py  test_perceive_hydrogens.py  test_potential.py  test_protocol.py  test_region.py  test_selection.py  test_space.py  test_struct.py  test_system.py  test_topology.py  test_trajectory.py  test_unit.py  test_virtualsite.py
tests/test_cpp/: test_random_walk.cpp
tests/test_data/: test_data_access.py
tests/test_db/: test_h5df.py
tests/test_docs/: test_doc_examples.py
tests/test_embed/: test_pipeline.py
tests/test_engine/: __init__.py  test_base.py  test_lammps_relax.py  test_openmm.py
tests/test_external/: test_rdkit_adapter.py
tests/test_integration/: test_moltemplate_e2e.py  test_polymer_assembly.py  test_polymer_system.py  test_waterbox_workflow.py
tests/test_io/: UiO-66_all.cif  test_amber_inpcrd.py  test_amber_prmtop.py  test_ase.py  test_chflloader.py  test_lammps.py  test_lammps_forcefield_writer.py  test_lmp.py  test_pdb.py  test_pyarrow.py  test_smile.py  test_xml.py
tests/test_legacy/: test_cross_correlation.py  test_msd.py
tests/test_mcp/: test_server.py
tests/test_md/: test_simulator.py
tests/test_modeller/: test_random_walk.py
tests/test_networkx/: test_cluster.py
(+1254 files in other folders)
